--- a/.env-example
+++ b/.env-example
@@ -1,9 +1,10 @@
 DATABASE_DIALECT=''
-DATABASE=''
 DATABASE_HOST=''
-DATABASE_INSTANCE=''
+DATABASE_PORT=''
 DATABASE_USERNAME=''
 DATABASE_PASSWORD=''
+DATABASE=''
+DATABASE_TABLE=''
 
 TENTEC_USER=''
 TENTEC_PWD=''
