--- a/.env-example
+++ b/.env-example
@@ -1,10 +1,10 @@
-DATABASE_DIALECT=''
+DATABASE_DIALECT='mssql'
 DATABASE_HOST=''
 DATABASE_PORT=''
 DATABASE_USERNAME=''
 DATABASE_PASSWORD=''
-DATABASE=''
-DATABASE_TABLE=''
+DATABASE='API_Tentec'
+DATABASE_TABLE='discagem'
 
-TENTEC_USER=''
-TENTEC_PWD=''
+TENTEC_USER='47012641'
+TENTEC_PWD='@47012641#'
